tests/semantic_cases/invalid/typed_param_shadows_builtin_type.ob0
MODULE Main;
PROCEDURE P(INTEGER: INTEGER);
BEGIN
  WriteInt(INTEGER)
END P;
BEGIN
END Main.
